app/assets/sass/application.scss
// global styles for <a> and <p> tags
$govuk-global-styles: true;

// Not in design system:
$button-colour: #00823b;

// Import GOV.UK Frontend
@import "node_modules/govuk-frontend/all";

// Take a look at in app/assets/sass/patterns/ to see which files are imported.
@import 'patterns/simplemde-theme';
@import 'patterns/course-parts';
@import 'patterns/success-summary';
@import "patterns/check-your-answers";
@import "patterns/step-by-step-navigation";
@import "patterns/task-list";
@import "patterns/related-items";

.multiple-choice [type=checkbox] + label::before {
  background: #fff;
}

.not-running-notice {
  border: 5px solid govuk-colour("grey-3");
  padding: 20px;
}

#proposition-links {
  color: govuk-colour("white");
  font-weight: bold;
}

table thead th {
  border-bottom-width: 2px;
  border-color: govuk-colour("black");
}

.table-small {
  th {
    @include govuk-font(16, $weight: bold);
  }

  td {
    @include govuk-font(16);
  }
}

.phase-tag-small {
  // padding-top: 4px;
  // padding-bottom: 1px;
  padding: 4px 8px 1px;
}

.phase-tag-table {
  // display: block;
}

.phase-tag-no-content {
  background: govuk-colour("white");
  color: govuk-colour("grey-1");
  border: 2px solid lighten(govuk-colour("grey-1"), 10%);
  margin-top: -1px;
  margin-bottom: -1px;
}

.phase-tag-not-running {
  background: govuk-colour("grey-3");
  color: govuk-colour("black");
  margin-top: -1px;
  margin-bottom: -1px;
}

.phase-tag-draft {
  background: govuk-colour("orange");
}

.phase-tag-published {
  background: $button-colour;
}

.empty {
  color: govuk-colour("grey-1");
}

.status {
  background: govuk-colour("grey-3");
  padding: 20px;
}

.status-box {
  background-color: govuk-colour("grey-4");
  padding: 20px;
  border-top: 5px solid govuk-colour("blue");
}

.who-saved {
  @include govuk-font(16);
}

// Related items
// (These styles will be moved to GOV.UK elements, duplicating here for now.)
.govuk-related-items {
  margin-top: $govuk-gutter;
  border-top: 10px solid govuk-colour("blue");
  padding-top: 5px;

  .govuk-heading-m {
    margin-top: 0.3em;
    margin-bottom: 0.5em;
  }

  li {
    margin-bottom: 10px;
    list-style-type: none;
  }
}

.doc-image {
  max-width: 100%;
  border: 1px solid $govuk-border-colour;
  margin-bottom: $govuk-gutter * 2;
}

// Add extra styles here, or re-organise the Sass files in whichever way makes most sense to you

.remove-top-margin {
  margin-top: 0;
}

.remove-bottom-margin {
  margin-bottom: 0;
}

.add-bottom-margin {
  margin-bottom: $govuk-gutter / 2;
}

.add-double-bottom-margin {
  margin-bottom: $govuk-gutter;
}

.add-top-margin {
  margin-top: $govuk-gutter / 2;
}

.add-margin-for-label {
  margin-top: 25px;
}

.add-margin-for-label-with-help {
  margin-top: 45px;
}

.form-control-full {
  width: 100%;
}

.results-item {
  margin-bottom: $govuk-gutter;
}

.metadata dt,
.metadata dd {
  display: inline-block;
}

.metadata dt {
  width: 20%;
}

.metadata dd {
  width: 79%;
  margin-left: 0;
}

.filter-category {
  background-color: govuk-colour("grey-3");
  padding: 12px;
  margin-bottom: 10px;
}

.filters {
  background-color: govuk-colour("white");
  padding: 10px;
}

.filter-heading {
  margin-top: 3px;
}

.filter-link {
  padding-top: 10px;
}

.tabs {
  background: govuk-colour("grey-4");
  padding-left: 0;
  @include govuk-font(19, $weight: bold);
  margin-bottom: $govuk-gutter;

  li {
    margin-bottom: -1px;
    display: inline-block;
  }

  a {
    display: block;
    padding: 15px 20px 10px;
    text-decoration: none;
    border-bottom: 5px solid govuk-colour("grey-4");

    &:visited {
      color: $govuk-link-colour;
    }

    &:focus {
      border-color: $govuk-focus-colour;
    }
  }

  .active a {
    border-bottom-color: govuk-colour("blue");
  }
}

.form-control-xsmall {
  width: 120px;
}

.form-control-small {
  width: 200px;
}

dt,
dd {
  display: inline;
}

dt {
  margin-right: 0.25em;
}

dl.aligned {
  overflow: hidden;
}

dl.aligned dt {
    width: 30%;
    float: left;
    margin: 0;
    clear: both;
}

dl.aligned.course-part-tasks dt {
  width: 40%;
}


dl.aligned dd {
    width: 70%;
    float: right;
}

dl.aligned.course-part-tasks dd {
  width: 60%;
}

.study-options-table-code {
  width: 120px;
}

.study-options-table-vacancies {
  width: 120px;
}

.multiple-options li {
  margin-bottom: 5px;
  border-bottom: 1px solid #ccc;
}

.fake-email {
  margin-left: 15px;
  margin-top: 20px;
  border: 5px solid $govuk-border-colour;
  padding: 60px;
}

.ucas-info-table tr:last-child td {
  border-bottom: 0;
}

.ucas-info-table  {
  // .subject-col {
  //   width: 40%;
  // }
  //
  // .type-col {
  //   width: 40%;
  // }
  //
  // .status-col {
  //   width: 20%;
  // }

  .ucas-view-link {
    text-align: right;
  }
}

.missing-section {
  border: 5px solid $govuk-border-colour;
  padding: $govuk-gutter / 2;
}

.preview-pre {
  white-space: pre-wrap;
}

.no-wrap,
.nowrap {
  white-space: nowrap;
}

.textarea-wrapper {
  position: relative;

  .custom-toolbar {
    text-align: right;
    width: 320px;
    position: absolute;
    right: 12px;
    top: 12px;
    z-index: 2;

    label {
      @include govuk-font(16);
      display: inline;
      margin-right: 5px;
    }

    select {
      @include govuk-font(16);
      width: 220px;
    }
  }
}

.form-block--or {
  margin-left: 10px;
  margin-bottom: 10px;
}

@media (min-width: 641px) {
  .form-block--or {
    margin-top: -10px;
    margin-bottom: 20px;
  }
}

